force-app/main/default/objects/ARF_Payment_Application__c/ARF_Payment_Application__c.object-meta.xml
<CustomObject>
    <description>Junction linking payments to invoices</description>
    <label>Payment Application</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>Payment Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>