force-app/main/default/objects/ARF_Payment_Application__c/fields/Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied__c</fullName>
    <description>Amount from this payment applied to this invoice</description>
    <label>Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>