force-app/main/default/objects/ARF_Payment_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date the payment was applied</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>