force-app/main/default/objects/ARF_Payment_Application__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice this payment is applied to</description>
    <label>Invoice</label>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipLabel>Payment_Applications</relationshipLabel>
    <relationshipName>Payment_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>