force-app/main/default/objects/ARF_Payment_Application__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <description>Parent payment record</description>
    <label>Payment</label>
    <referenceTo>ARF_Payment__c</referenceTo>
    <relationshipLabel>Payment_Applications</relationshipLabel>
    <relationshipName>Payment_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>